API re-design (dynamic headers)
To support webhooks for ArgoCD by the
ArgoCD plugin, the API is re-designed so
that other plugins do not have to use the
http client themselfes.